# ml-exam

./: .gitignore  README.md  Synopsis.md  exam.md  main.py  pyproject.toml  requirements.txt
docs/: 10. Svetový realizmus.md  12. Literárna moderna.md  2.md  5. Barok.md  8.md  9.md
exams/: exam_20251204_201927.md  exam_20251204_201944.md  exam_20251204_201944_en.md  exam_20251204_202327.md  exam_20251204_202327_en.md  exam_20251204_203008.md  exam_20251204_203008_en.md  exam_20251204_203313.md  exam_20251204_203313_en.md
models/: Gemini.py  Ollama.py
sources/: 1.md  11.md  13.md  14.md  3.md  4.md  6.md  7.md
src/: chunker.py  memory.py  task.py
src/agents/: exam_creator.py  markdown_verifier.py  planner.py  reviewer.py  saver.py
src/models/: gemini.py
src/tools/: file_tools.py  markdown_tools.py
